--- a/ChatApp/templates/auth/login.html
+++ b/ChatApp/templates/auth/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes"/>
     <title>login</title>
     <link rel="icon" href="/ChatApp/static/img/favicon.png" />
-    <link rel="stylesheet" href="/ChatApp/static/css/auth.css">
+    <link rel="stylesheet" href="../../static/css/auth.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
       <div class="auth-container">
       <img 
         class="auth-main-logo"
-        src="/ChatApp/static/img/Tabi talk ロゴ.png">
+        src="../../static/img/Tabi talk ロゴ.png" alt="ロゴ">
         
       <form class="auth-form" method="post">
       <h1 class="auth-title">ログイン</h1>
