lgin.html / auth.cssの変更・スマホサイズ対応

--- a/ChatApp/templates/auth/login.html
+++ b/ChatApp/templates/auth/login.html
@@ -21,7 +21,7 @@
         
       <form class="auth-form" method="post">
       <h1 class="auth-title">ログイン</h1>
-      <div>
+      <div class="auth-form-inputs">
         <label for="email-input">メールアドレス</label><br>
         <input 
         type="text"
@@ -30,7 +30,7 @@
         id="email-input">
       </div>
 
-      <div>
+      <div class="auth-form-inputs">
         <label for="pasword-input">パスワード</label><br>
         <input 
         type="text"
