--- a/ChatApp/static/css/auth.css
+++ b/ChatApp/static/css/auth.css
@@ -1,81 +1,81 @@
 .auth-wrapper {
-  width: 100vw;
-  min-height: 100vh;
+  max-width: 430px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-family: "M PLUS 1p", sans-serif;
-  font-style: normal;
+  font-size: 62.5%;
 }
 
-
 .auth-container {
-  width: 100%;
+  width: 80%;
   min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-
 .auth-main-logo{
-  width: 30%;
-  height: 30%;
-  margin: 56px;
+  width: 100%;
+  height: 100%;
+  margin: 1.5em;
 }
-
 
 .auth-form {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+  font-family: "M PLUS 1p", sans-serif;
+  font-size: 1rem;
 }
 
-
 .auth-title {
-  width: 40%;
-  height: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 48px;
+  font-size: 1.5rem;
+  margin: 1.2em;
 }
 
+.auth-form-inputs {
+  margin: 1em;
+}
 
 .auth-form input {
   background-color: #d9d9d9;
   border: solid 2px #d9d9d9;
   outline: none;
   border-radius: 5px;
-  margin-bottom: 56px;
   line-height: 32px;
-  width: 20rem;
-  padding: 0.2rem 1rem;
+  font-size: 1rem;
+  width: 15rem;
+  padding: 0.2rem 0.8rem;
 }
 
 .auth-form input::placeholder {
   color: #a5a3a3;
 }
 
-
 .auth-button {
   cursor:pointer;
-  font-size: 1.2rem;
-  width: 12em;
+  width: 10em;
   height: 2.5em;
   color:#FFFFFF;
   background-color: #1A8BA6;
   border: solid 2px #1A8BA6;
   outline: none;
   border-radius: 5px;
-  margin-bottom: 48px;
+  margin: 1.5em;
   font-family: "M PLUS 1p", sans-serif;
+  font-size: 1.2rem;
 }
 
 a {
   text-decoration: none;
   color: #000000; 
+  margin: 1em;
 }
