--- a/ChatApp/static/css/auth.css
+++ b/ChatApp/static/css/auth.css
@@ -3,6 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   font-family: "M PLUS 1p", sans-serif;
   font-size: 62.5%;
