--- a/ChatApp/static/css/auth.css
+++ b/ChatApp/static/css/auth.css
@@ -1,45 +1,43 @@
+.body {
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+}
+
 .auth-wrapper {
-  max-width: 430px;
-  height: 100%;
+  max-width: 402px;
+  max-height: 100vh;
+  margin: 0 auto;
+  padding: 40px;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
   font-family: "M PLUS 1p", sans-serif;
-  font-size: 62.5%;
 }
 
 .auth-container {
-  width: 80%;
-  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .auth-main-logo{
-  width: 100%;
-  height: 100%;
-  margin: 1.5em;
+  width: 70%;
+  margin: 1rem;
 }
 
 .auth-form {
-  width: 100%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  font-family: "M PLUS 1p", sans-serif;
   font-size: 1rem;
+  margin: 1rem 0;
 }
 
 .auth-title {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   font-size: 1.5rem;
-  margin: 1.2em;
+  margin: 1rem;
 }
 
 .auth-form-inputs {
@@ -51,7 +49,7 @@
   border: solid 2px #d9d9d9;
   outline: none;
   border-radius: 5px;
-  line-height: 32px;
+  line-height: 2rem;
   font-size: 1rem;
   width: 15rem;
   padding: 0.2rem 0.8rem;
@@ -72,11 +70,19 @@
   border-radius: 5px;
   margin: 1.5em;
   font-family: "M PLUS 1p", sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.2em;
+}
+
+.auth-button:hover{
+  opacity: 70%;
 }
 
 a {
   text-decoration: none;
   color: #000000; 
   margin: 1em;
+}
+
+a:hover{
+  opacity: 70%;
 }
