--- a/ChatApp/static/css/auth.css
+++ b/ChatApp/static/css/auth.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* justify-content: space-between; */
 }
 
 .auth-main-logo{
@@ -30,6 +31,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* justify-content: space-between; */
   font-size: 1rem;
   margin: 1rem 0;
 }
@@ -80,7 +82,6 @@
 a {
   text-decoration: none;
   color: #000000; 
-  margin: 1em;
 }
 
 a:hover{
