--- a/ChatApp/static/css/auth.css
+++ b/ChatApp/static/css/auth.css
@@ -6,7 +6,7 @@
 
 .auth-wrapper {
   max-width: 402px;
-  max-height: 100vh;
+  height: auto;
   margin: 0 auto;
   padding: 40px;
   display: flex;
@@ -18,7 +18,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: space-between; */
 }
 
 .auth-main-logo{
@@ -31,7 +30,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: space-between; */
   font-size: 1rem;
   margin: 1rem 0;
 }
