--- a/ChatApp/templates/error/404.html
+++ b/ChatApp/templates/error/404.html
@@ -5,5 +5,5 @@ body %}
     <div class="error404">error404</div>
     <img
      src="{{ url_for('stack', filename='image/ハッカソンerror.png')}}" alt="Tabi talkロゴ" class="error"/>
-    <a class="error-button blue" href="{{url_for('home_view') }}">ホームに戻る</a>
+    <a class="error-button blue" href="{{url_for('home_view') }}">ホーム</a>
 {% endblock %}
