--- a/ChatApp/templates/auth/login.html
+++ b/ChatApp/templates/auth/login.html
@@ -6,41 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes"/>
     <title>login</title>
     <link rel="icon" href="/ChatApp/static/img/favicon.png" />
-    <link rel="stylesheet" href="../../static/css/auth.css">
+    <link rel="stylesheet" href="/ChatApp/static/css/auth.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
   </head>
 
+<!-- {% extends 'auth/base.html' %} {% block title %}
+<title>login</title>
+{% endblock %} {% block body %} -->
+
   <body>
     <div class="auth-wrapper">
-      <div class="auth-container">
       <img 
         class="auth-main-logo"
-        src="../../static/img/Tabi talk ロゴ.png" alt="ロゴ">
-        
-      <form class="auth-form" method="post">
-      <h1 class="auth-title">ログイン</h1>
-      <div class="auth-form-inputs">
-        <label for="email-input">メールアドレス</label><br>
-        <input 
-        type="text"
-        placeholder="メールアドレス"
-        name="email"
-        id="email-input">
-      </div>
+        src="/ChatApp/static/img/Tabi talk ロゴ.png" alt="ロゴ">
 
-      <div class="auth-form-inputs">
-        <label for="pasword-input">パスワード</label><br>
-        <input 
-        type="text"
-        placeholder="パスワード"
-        name="password"
-        id="pasword-input">
+      <h1 class="auth-title">ログイン</h1>
+
+      <form class="auth-form" method="post">
+          <div class="auth-form-inputs">
+            <label for="email-input">メールアドレス</label><br>
+              <input 
+              type="text"
+              placeholder="メールアドレス"
+              name="email">
+          </div>
+
+          <div class="auth-form-inputs">
+            <label for="pasword-input">パスワード</label><br>
+              <input 
+              type="text"
+              placeholder="パスワード"
+              name="password">
+          </div>
+      </form>
+
+      <div class="auth-btnlink">
+        <button class="auth-button" type="button" onclick="loction.href='http://127.0.0.1:55000/home'">ログイン</button>
+        <a class="auth-link" href="signup.html">新規登録はこちら</a>
       </div>
-      <button class="auth-button" type="button" onclick="loction.href='http://127.0.0.1:55000/home'">ログイン</button>
-      <a class="switch-auth-mode" href="signup.html">新規登録はこちら</a>
-    </form>
-  </div>
-</div>
+    </div>
   </body>
