--- a/ChatApp/templates/auth/signup.html
+++ b/ChatApp/templates/auth/signup.html
@@ -13,7 +13,7 @@
   </head>
 
 <!-- {% extends 'auth/base.html' %} {% block title %}
-<title>login</title>
+<title>signup</title>
 {% endblock %} {% block body %} -->
 
   <body>
@@ -55,4 +55,5 @@
         <a class="auth-link" href="login.html">戻る</a>
       </div>
     </div>
+   <!-- {% endblock %}  -->
   </body>
