--- a/ChatApp/templates/auth/signup.html
+++ b/ChatApp/templates/auth/signup.html
@@ -1,25 +1,16 @@
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes"/>
-    <title>signup</title>
-    <link rel="icon" href="/ChatApp/static/img/favicon.png" />
-    <link rel="stylesheet" href="../../static/css/auth.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-  </head>
+{% extends 'auth/base.html' %}
+{% block title %}
+<title>signup</title>
+{% endblock %}
+{% block body %}
 
-  <body>
-    <div class="auth-wrapper">
-      <div class="auth-container">
-      <img 
-        class="auth-main-logo"
-        src="../../static/img/Tabi talk ロゴ.png" alt="ロゴ">
-        
-      <form class="auth-form" method="post">
+<div class="auth-wrapper">
+  <div class="auth-container">
+    <img 
+      class="auth-main-logo"
+      src="../../static/img/Tabi talk ロゴ.png" alt="ロゴ">
+      
+    <form class="auth-form" action="{{ url_for('signup.signup_process') }}" method="post">
       <h1 class="auth-title">ユーザー登録</h1>
 
       <div class="auth-form-inputs">
@@ -48,9 +39,9 @@
         name="password"
         id="pasword-input">
       </div>
-      <button class="auth-button" type="button" onclick="loction.href='http://127.0.0.1:55000/home'">登録</button>
-      <a class="switch-auth-mode" href="login.html">戻る</a>
+      <button class="auth-button" type="button" onclick="loction">登録</button>
+      <a class="switch-auth-mode" href="{{ url_for('login_logout.login_view') }}">戻る</a>
     </form>
   </div>
 </div>
-  </body>
+{% endblock %}
