--- a/ChatApp/templates/auth/login.html
+++ b/ChatApp/templates/auth/login.html
@@ -43,7 +43,7 @@
       </form>
 
       <div class="auth-btnlink">
-        <button class="auth-button" type="button" onclick="loction.href='http://127.0.0.1:55000/home'">ログイン</button>
+        <button class="auth-button" type="submit">ログイン</button>
         <a class="auth-link" href="signup.html">新規登録はこちら</a>
       </div>
     </div>
