--- a/ChatApp/templates/auth/signup.html
+++ b/ChatApp/templates/auth/signup.html
@@ -12,9 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
   </head>
 
-<!-- {% extends 'auth/base.html' %} {% block title %}
+<!-- {% extends 'auth/base.html' %}
+{% block title %}
 <title>signup</title>
-{% endblock %} {% block body %} -->
+{% endblock %}
+{% block body %} -->
 
   <body>
     <div class="auth-wrapper">
@@ -24,7 +26,7 @@
     
       <h1 class="auth-title">ユーザー登録</h1>
 
-      <form class="auth-form" method="post">
+      <form class="auth-form" action="/ChatApp/templates/home.html" method="post">
         <div class="auth-form-name">
           <label for="name-input">ユーザー名</label><br>
             <input 
@@ -51,9 +53,9 @@
       </form>
 
       <div class="auth-btnlink">
-        <button class="auth-button" type="button" onclick="loction.href='http://127.0.0.1:55000/home'">登録</button>
+        <button class="auth-button" type="submit" onclick="loction.href='http://127.0.0.1:55000/home'">登録</button>
         <a class="auth-link" href="login.html">戻る</a>
       </div>
     </div>
-   <!-- {% endblock %}  -->
+<!-- {% endblock %}  -->
   </body>
