--- a/ChatApp/templates/auth/base.html
+++ b/ChatApp/templates/auth/base.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes"/>
     {% block title %}{% endblock %}
-    <link rel="icon" href="/ChatApp/static/img/favicon.png" />
-    <link rel="stylesheet" href="/ChatApp/static/css/auth.css">
+    <link rel="icon" href="../../static/img/favicon.png" />
+    <link rel="stylesheet" href="../../static/css/auth.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
