--- a/ChatApp/templates/auth/signup.html
+++ b/ChatApp/templates/auth/signup.html
@@ -2,46 +2,44 @@
 {% block title %}
 <title>signup</title>
 {% endblock %}
-{% block body %}
 
-<div class="auth-wrapper">
-  <div class="auth-container">
+{% block body %}
+  <div class="auth-wrapper">
     <img 
       class="auth-main-logo"
-      src="../../static/img/Tabi talk ロゴ.png" alt="ロゴ">
-      
-    <form class="auth-form" action="{{ url_for('signup.signup_process') }}" method="post">
-      <h1 class="auth-title">ユーザー登録</h1>
+      src="../../static/img/Tabi talk ロゴ.png" alt="ロゴ">
+  
+    <h1 class="auth-title">ユーザー登録</h1>
 
-      <div class="auth-form-inputs">
-        <label for="email-input">ユーザー名</label><br>
+  <form class="auth-form" action="{{ url_for('signup.signup_process') }}" method="post">
+    <div class="auth-form-name">
+      <label for="name-input">ユーザー名</label><br>
         <input 
         type="text"
         placeholder="ユーザー名"
-        name="name"
-        id="name-input">
-      </div>    
+        name="name">
+    </div>
 
-      <div class="auth-form-inputs">
-        <label for="email-input">メールアドレス</label><br>
+    <div class="auth-form-inputs">
+      <label for="email-input">メールアドレス</label><br>
         <input 
         type="text"
         placeholder="メールアドレス"
-        name="email"
-        id="email-input">
-      </div>
+        name="email">
+    </div>
 
-      <div class="auth-form-inputs">
-        <label for="pasword-input">パスワード</label><br>
+    <div class="auth-form-inputs">
+      <label for="pasword-input">パスワード</label><br>
         <input 
         type="text"
         placeholder="パスワード"
-        name="password"
-        id="pasword-input">
-      </div>
-      <button class="auth-button" type="button" onclick="loction">登録</button>
-      <a class="switch-auth-mode" href="{{ url_for('login_logout.login_view') }}">戻る</a>
-    </form>
+        name="password">
+    </div>
+  </form>
+
+  <div class="auth-btnlink">
+    <button class="auth-button" type="submit">登録</button>
+    <a class="auth-link" href="{{ url_for('login_logout.login_view') }}">戻る</a>
   </div>
 </div>
-{% endblock %}
+{% endblock %} 
