--- a/ChatApp/templates/home/home.html
+++ b/ChatApp/templates/home/home.html
@@ -1,4 +1,4 @@
-{% extends 'auth/base.html' %}
+{% extends 'home/base.html' %}
 {% block title %}
 <title>home</title>
 {% endblock %}
@@ -6,15 +6,16 @@
   <body>
     <header class="header">
       <div class="header-inner">
-        <a class="back-btn" onclick="history.back()"><img src="/ChatApp/static/img/戻る.png" alt="戻る"></a>
-        <img class="header-logo" src="/ChatApp/static/img/Tabi talk ロゴ.png" alt="ロゴ">
-        <span class="header-uname">{{user_name}}</span>
-        <a class="header-menu"><img src="/ChatApp/static/img/ハンバーガーメニュー.png" alt="メニュー"></a>
+        <a class="back-btn" onclick="history.back()"><img src="../../static/img/戻る.png" alt="戻る"></a>
+        <img class="header-logo" src="../../static/img/Tabi talk ロゴ.png" alt="ロゴ">
+        <span class="header-uname">{{user_name}}name</span>
+        <!-- ’name’は表示確認用のダミーテキスト -->
+        <a class="header-menu"><img src="../../static/img/ハンバーガーメニュー.png" alt="メニュー"></a>
       </header>
       
       <div class="container">
         <main class="main">
-          <img class="main-img" src="/ChatApp/static/img/日本地図.png" alt="日本地図">
+          <img class="main-img" src="../../static/img/日本地図.png" alt="日本地図">
           
         </main>
       </div>
