--- a/ChatApp/templates/auth/login.html
+++ b/ChatApp/templates/auth/login.html
@@ -23,7 +23,7 @@
       <div class="auth-form-inputs">
         <label for="pasword-input">パスワード</label><br>
           <input 
-          type="text"
+          type="password"
           placeholder="パスワード"
           name="password">
       </div>
