--- a/ChatApp/templates/auth/signup.html
+++ b/ChatApp/templates/auth/signup.html
@@ -39,7 +39,7 @@
         name="password"
         id="pasword-input">
       </div>
-      <button class="auth-button" type="button">登録</button>
+      <button class="auth-button" type="submit">登録</button>
       <a class="switch-auth-mode" href="{{ url_for('login_logout.login_view') }}">戻る</a>
     </form>
   </div>
