--- a/ChatApp/templates/auth/login.html
+++ b/ChatApp/templates/auth/login.html
@@ -14,7 +14,7 @@
         <div class="auth-form-inputs">
           <label for="email-input">メールアドレス</label><br>
           <input 
-          type="text"
+          type="email"
           placeholder="メールアドレス"
           name="email"
           id="email-input">
@@ -23,13 +23,25 @@
         <div class="auth-form-inputs">
           <label for="pasword-input">パスワード</label><br>
           <input 
-          type="text"
+          type="password"
           placeholder="パスワード"
           name="password"
           id="pasword-input">
         </div>
-        <button class="auth-button" type="button">ログイン</button>
-        <a class="switch-auth-mode" href="{{ url_for('signup.signup_view') }}">新規登録はこちら</a>
+        
+        <div class="auth-button-container">
+          {% with messages = get_flashed_messages() %} {% if messages %}
+          <ul class="flashes">
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+          </ul>
+          {% endif %} {% endwith %}
+          <button class="auth-button" type="submit">ログイン</button>
+          <a class="switch-auth-mode" href="{{ url_for('signup.signup_view') }}">
+            新規登録はこちら
+          </a>
+        </div>
     </form>
   </div>
 </div>
