--- a/ChatApp/static/css/auth.css
+++ b/ChatApp/static/css/auth.css
@@ -9,12 +9,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  overflow: auto;
   font-family: "M PLUS 1p", sans-serif;
 }
 
 .auth-wrapper {
   max-width: 430px;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -35,16 +36,23 @@ body {
 }
 
 .auth-form {
-  width: 70%;
-  min-height: 240px;
+  width: 260px;
+  height: 240px;
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   justify-content: space-evenly;
-}  
+  margin: 0 auto;
+}
 
 .auth-form-inputs {
-  display: block;
+  width: 100%;
+  display: flex;
   flex-direction: column;
+  gap: 0px;
+}
+
+.auth-form-inputs label {
+  text-align: start;
 }
 
 .auth-form input {
