--- a/ChatApp/templates/auth/login.html
+++ b/ChatApp/templates/auth/login.html
@@ -7,31 +7,42 @@
   <div class="auth-wrapper">
     <img 
       class="auth-main-logo"
-      src="../../static/img/Tabi talk ロゴ.png" alt="ロゴ">
+      src="{{ url_for('static', filename='img/Tabi talk ロゴ.png') }}" alt="ロゴ">
 
     <h1 class="auth-title">ログイン</h1>
 
-    <form class="auth-form" action="{{ url_for('login_logout.login_process') }}" method="post">
+    <form action="{{ url_for('login_logout.login_process') }}" method="post">
+      <div class="auth-form">
       <div class="auth-form-inputs">
-        <label for="email-input">メールアドレス</label><br>
+        <label for="email-input">メールアドレス</label>
           <input 
           type="text"
+          id="email-input"
           placeholder="メールアドレス"
           name="email">
       </div>
 
       <div class="auth-form-inputs">
-        <label for="pasword-input">パスワード</label><br>
+        <label for="password-input">パスワード</label>
           <input 
           type="password"
+          id="password-input"
           placeholder="パスワード"
           name="password">
       </div>
+      </div>
+      
+      <div class="auth-btnlink">
+          {% with messages = get_flashed_messages() %} {% if messages %}
+          <ul class="flashes">
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+          </ul>
+          {% endif %} {% endwith %}
+        <button class="auth-button" type="submit">ログイン</button>
+        <a class="auth-link" href="{{ url_for('signup.signup_view') }}">新規登録はこちら</a>
+      </div>
     </form>
-
-    <div class="auth-btnlink">
-      <button class="auth-button" type="submit">ログイン</button>
-      <a class="auth-link" href="{{ url_for('signup.signup_view') }}">新規登録はこちら</a>
-    </div>
   </div>
 {% endblock %} 
