--- a/ChatApp/templates/auth/signup.html
+++ b/ChatApp/templates/auth/signup.html
@@ -11,30 +11,32 @@
   
     <h1 class="auth-title">ユーザー登録</h1>
 
-    <form class="auth-form" action="{{ url_for('signup.signup_process') }}" method="post">
-      <div class="auth-form-inputs">
-        <label for="name-input">ユーザー名</label>
-          <input 
-          type="text"
-          placeholder="ユーザー名"
-          name="user_name"
-          id="name-input">
+    <form action="{{ url_for('signup.signup_process') }}" method="post">
+      <div class="auth-form">
+        <div class="auth-form-inputs">
+          <label for="name-input">ユーザー名</label>
+            <input 
+            type="text"
+            placeholder="ユーザー名"
+            name="user_name"
+            id="name-input">
         </div>    
 
-      <div class="auth-form-inputs">
-        <label for="email-input">メールアドレス</label>
-          <input 
-          type="text"
-          placeholder="メールアドレス"
-          name="email">
-      </div>
+        <div class="auth-form-inputs">
+          <label for="email-input">メールアドレス</label>
+            <input 
+            type="text"
+            placeholder="メールアドレス"
+            name="email">
+        </div>
 
-      <div class="auth-form-inputs">
-        <label for="pasword-input">パスワード</label>
-          <input 
-          type="text"
-          placeholder="パスワード"
-          name="password">
+        <div class="auth-form-inputs">
+          <label for="pasword-input">パスワード</label>
+            <input 
+            type="text"
+            placeholder="パスワード"
+            name="password">
+        </div>
       </div>
 
       <div class="auth-btnlink">
@@ -47,8 +49,6 @@
         {% endif %} {% endwith %}  
         <button class="auth-button" type="submit">登録</button>
         <a class="auth-link" href="{{ url_for('login_logout.login_view') }}">戻る</a>
-            name="password"
-            id="pasword-input">
       </div>
     </form>
   </div>
