--- a/ChatApp/static/css/auth.css
+++ b/ChatApp/static/css/auth.css
@@ -37,7 +37,7 @@ body {
 
 .auth-form {
   width: 260px;
-  height: 240px;
+  min-height: 240px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -74,6 +74,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 32px;
+  margin-top: 24px;
 }
 
 .auth-button {
