--- a/ChatApp/static/css/auth.css
+++ b/ChatApp/static/css/auth.css
@@ -7,6 +7,7 @@
 body {
   height: 100svh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   overflow: auto;
