--- a/ChatApp/static/css/home.css
+++ b/ChatApp/static/css/home.css
@@ -7,44 +7,41 @@
 body {
   height: 100svh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  overflow: hidden;
   font-family: "M PLUS 1p", sans-serif;
+}
+
+.home-wrapper {
+  max-width: 430px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   background-color: #7DD3DC;
 }
 
+/* ======== ヘッダー ======== */
+
 .header {
   width: 100%;
-  height: 100px;
-  position: fixed;
-  top: 0;
-  left: 0;
+  height: 120px;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   font-size: 20px;
   background-color: #FFFFFF;
 }
 
 .header-inner {
-  width: 95%;
-  background-color: #FFFFFF;
+  width: 94%;
   display: flex;
-  flex-direction: row ;
-  /* justify-content: space-between; */
+  justify-content: center;
   align-items: center;
-  margin-bottom: 8px;
-  gap: 8px;
-}
-
-.back-btn {
-  flex-grow: 0;
-}
-
-.header-logo {
-  flex-grow: 0;
+  margin-bottom: 12px;
+  gap: 12px;
+  background-color: #FFFFFF;
 }
 
 .header-uname {
@@ -52,34 +49,50 @@ body {
   text-align: end;
 }
 
-.header-menu {
-  flex-grow: 0;
-}
-
 .header img {
   height: 48px;
   width: auto;
-  /* background-size: auto 48px;  */
   background-color: #FFFFFF;
 }
 
-.container {
-  max-width: 430px;
-  height: 100svh;
+/* ======== メインコンテンツ ======== */
+
+
+main{
+  flex: 1;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.main-contents {
+  height: 100%;
+  width: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.main {
-  display: flex;
-  justify-content: center;
-  height: auto;
-  width: 100%;
+.main-img {
+  position: relative;  /* リンク画像の配置基準値 */
+  width: 90%;
 }
 
-.main-img {
-  width: 90%;
+.map-img {
+  width: 100%;
   height: auto;
 }
+
+.main-img a {
+  position: absolute;
+  display: block;
+}
+
+#hokkaido-tohoku  { top: 14%; left: 66%; }
+#kanto            { top: 45%; left: 66%; }
+#chubu            { top: 36%; left: 40%; }
+#kinki            { top: 58%; left: 52%; }
+#chugoku          { top: 45%; left: 8%; }
+#shikoku          { top: 70%; left: 18%; }
+#kyushu-okinawa   { top: 78%; left: 8%; }
