--- a/ChatApp/templates/home/home.html
+++ b/ChatApp/templates/home/home.html
@@ -2,22 +2,40 @@
 {% block title %}
 <title>home</title>
 {% endblock %}
+
 {% block body %}
-  <body>
+  <div class="home-wrapper">
+    
     <header class="header">
       <div class="header-inner">
-        <a class="back-btn" onclick="history.back()"><img src="../../static/img/戻る.png" alt="戻る"></a>
-        <img class="header-logo" src="../../static/img/Tabi talk ロゴ.png" alt="ロゴ">
+        <a class="back-btn" onclick="history.back()"><img src="static/img/戻る.png" alt="戻る"></a>
+        <img class="header-logo" src="static/img/Tabi talk ロゴ.png" alt="ロゴ">
         <span class="header-uname">{{user_name}}name</span>
         <!-- ’name’は表示確認用のダミーテキスト -->
-        <a class="header-menu"><img src="../../static/img/ハンバーガーメニュー.png" alt="メニュー"></a>
-      </header>
-      
-      <div class="container">
-        <main class="main">
-          <img class="main-img" src="../../static/img/日本地図.png" alt="日本地図">
-          
-        </main>
+        <a class="header-menu"><img src="static/img/ハンバーガーメニュー.png" alt="メニュー"></a>
       </div>
-  </body>
+    </header>
+      
+    <main>
+      <div class="main-contents">
+        <div class="main-img">
+          <img class="map-img" src="static/img/日本地図.png" alt="背景画像">
+            <a id="hokkaido-tohoku" href="{{ url_for('login_logout.login_view') }}">
+              <img src="static/img/北海道・東北.png" alt="北海道・東北"></a>
+            <a id="kanto" href="{{ url_for('login_logout.login_view') }}">
+              <img src="static/img/関東.png" alt="関東"></a>
+            <a id="chubu" href="{{ url_for('login_logout.login_view') }}">
+              <img src="static/img/中部.png" alt="中部"></a>
+            <a id="kinki" href="{{ url_for('login_logout.login_view') }}">
+              <img src="static/img/近畿.png" alt="近畿"></a>
+            <a id="chugoku" href="{{ url_for('login_logout.login_view') }}">
+              <img src="static/img/中国.png" alt="中国"></a>
+            <a id="shikoku" href="{{ url_for('login_logout.login_view') }}">
+              <img src="static/img/四国.png" alt="四国"></a>
+            <a id="kyushu-okinawa" href="{{ url_for('login_logout.login_view') }}">
+              <img src="static/img/九州・沖縄.png" alt="九州・沖縄"></a>
+        </div>
+      </div>
+    </main>
+  </div>
 {% endblock %}
