logout実装完了,fileの追加

--- a/ChatApp/templates/home/home.html
+++ b/ChatApp/templates/home/home.html
@@ -4,4 +4,7 @@
 {% endblock %}
 {% block body %}
 <h1>Hello!ITEAM</h1>
+<a href="{{ url_for('login_logout.logout') }}">
+  ログアウト
+</a>
 {% endblock %}
