--- a/ChatApp/templates/home/home.html
+++ b/ChatApp/templates/home/home.html
@@ -4,18 +4,17 @@
 {% endblock %}
 
 {% block body %}
-  <div class="home-wrapper">
+  <!-- <div class="home-wrapper">
     
     <header class="header">
       <div class="header-inner">
         <a class="back-btn" onclick="history.back()"><img src="{{ url_for('static', filename='img/戻る.png') }}" alt="戻る"></a>
         <img class="header-logo" src="{{ url_for('static', filename='img/Tabitalkロゴ.png') }}" alt="ロゴ">
         <span class="header-uname">{{user_name}}name</span>
-        <!-- ’name’は表示確認用のダミーテキスト -->
         <a class="header-menu"><img src="{{ url_for('static', filename='img/ハンバーガーメニュー.png') }}" alt="メニュー"></a>
       </div>
     </header>
-      
+       -->
     <main>
       <div class="main-contents">
         <div class="main-img">
@@ -37,5 +36,5 @@
         </div>
       </div>
     </main>
-  </div>
+  <!-- </div> -->
 {% endblock %}
