--- a/ChatApp/templates/home/base.html
+++ b/ChatApp/templates/home/base.html
@@ -11,7 +11,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
   </head>
+  
   <body>
+    <div class="home-wrapper">
+      <header class="header">
+        <div class="header-inner">
+          <a class="back-btn" onclick="history.back()"><img src="{{ url_for('static', filename='img/戻る.png') }}" alt="戻る"></a>
+          <img class="header-logo" src="{{ url_for('static', filename='img/Tabitalkロゴ.png') }}" alt="ロゴ">
+          <span class="header-uname">{{user_name}}name</span>
+          <!-- ’name’は表示確認用のダミーテキスト -->
+          <a class="header-menu"><img src="{{ url_for('static', filename='img/ハンバーガーメニュー.png') }}" alt="メニュー"></a>
+        </div>
+      </header>
     {% block body %}{% endblock %}
+    </div>
   </body>
 </html>
