header.htmlをhome.htmlにincludeで挿入

--- a/ChatApp/templates/channels/home.html
+++ b/ChatApp/templates/channels/home.html
@@ -4,6 +4,9 @@
 {% endblock %}
 
 {% block body %}
+
+<div class="home-wrapper">
+  {% include 'channels/header.html' %}
   <main>
     <div class="main-contents">
       <div class="main-img">
@@ -25,4 +28,5 @@
       </div>
     </div>
   </main>
+</div>
 {% endblock %}
