--- a/ChatApp/templates/auth/signup.html
+++ b/ChatApp/templates/auth/signup.html
@@ -1,57 +1,57 @@
+
 {% extends 'auth/base.html' %}
 {% block title %}
 <title>signup</title>
 {% endblock %}
-{% block body %}
 
-<div class="auth-wrapper">
-  <div class="auth-container">
+{% block body %}
+  <div class="auth-wrapper">
     <img 
       class="auth-main-logo"
-      src="../../static/img/Tabi talk ロゴ.png" alt="ロゴ">
-      
-    <form class="auth-form" action="{{ url_for('signup.signup_process') }}" method="post">
-      <h1 class="auth-title">ユーザー登録</h1>
+      src="{{ url_for('static', filename='img/Tabitalkロゴ.png') }}" alt="ロゴ">
+  
+    <h1 class="auth-title">ユーザー登録</h1>
 
-      <div class="auth-form-inputs">
-        <label for="email-input">ユーザー名</label><br>
-        <input 
-        type="text"
-        placeholder="ユーザー名"
-        name="user_name"
-        id="name-input">
-      </div>    
+    <form action="{{ url_for('signup.signup_process') }}" method="post">
+      <div class="auth-form">
+        <div class="auth-form-inputs">
+          <label for="name-input">ユーザー名</label>
+            <input 
+            type="text"
+            placeholder="ユーザー名"
+            name="user_name"
+            id="name-input">
+        </div>    
 
-      <div class="auth-form-inputs">
-        <label for="email-input">メールアドレス</label><br>
-        <input 
-        type="text"
-        placeholder="メールアドレス"
-        name="email"
-        id="email-input">
+        <div class="auth-form-inputs">
+          <label for="email-input">メールアドレス</label>
+            <input 
+            type="text"
+            placeholder="メールアドレス"
+            name="email">
+        </div>
+
+        <div class="auth-form-inputs">
+          <label for="pasword-input">パスワード</label>
+            <input 
+            type="text"
+            placeholder="パスワード"
+            name="password">
+        </div>
       </div>
 
-      <div class="auth-form-inputs">
-        <label for="pasword-input">パスワード</label><br>
-        <input 
-        type="text"
-        placeholder="パスワード"
-        name="password"
-        id="pasword-input">
-      </div>
-
-      <div class="auth-button-container">
-          {% with messages = get_flashed_messages() %} {% if messages %}
-          <ul class="flashes">
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-          </ul>
-          {% endif %} {% endwith %}  
+      <div class="auth-btnlink">
+        {% with messages = get_flashed_messages() %} {% if messages %}
+        <ul class="flashes">
+          {% for message in messages %}
+          <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+        {% endif %} {% endwith %}  
         <button class="auth-button" type="submit">登録</button>
-        <a class="switch-auth-mode" href="{{ url_for('login_logout.login_view') }}">戻る</a>
+        <a class="auth-link" href="{{ url_for('login_logout.login_view') }}">戻る</a>
       </div>
     </form>
   </div>
 </div>
-{% endblock %}
+{% endblock %} 
