--- a/ChatApp/templates/channels/channels.html
+++ b/ChatApp/templates/channels/channels.html
@@ -1,10 +1,26 @@
 {% extends 'channels/base.html' %}
+{% block stylesheet %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/channels.css') }}">
+{% endblock %}
 {% block title %}
 <title>channels</title>
 {% endblock %}
 
 {% block body %}
-  {% for channels in channels %}
-    <h1>{{ channels.prefecture }}</h1>
-  {% endfor %} 
+
+<div class="home-wrapper">
+  {% include 'channels/header.html' %}
+  <main>
+    <div class="main-contents">
+      <div class="area-name">
+        {{ areas.area_name }}
+      </div>
+      <div class="prefectures">
+        {% for channels in channels %}
+        <a href="{{ url_for( 'chat.chat_view', channel_id='1')}}">{{ channels.prefecture }}</a>
+        {% endfor %}
+      </div>
+    </div>
+  </main>
+</div>
 {% endblock %}
