--- a/ChatApp/templates/channels/header.html
+++ b/ChatApp/templates/channels/header.html
@@ -2,7 +2,7 @@
         <div class="header-inner">
           <a class="back-btn" onclick="history.back()"><img src="{{ url_for('static', filename='img/戻る.png') }}" alt="戻る"></a>
           <img class="header-logo" src="{{ url_for('static', filename='img/Tabitalkロゴ.png') }}" alt="ロゴ">
-          <span class="header-uname">{{user_name}}name</span>
+          <span class="header-uname">{{ session['user_name'] }}</span>
           <!-- ’name’は表示確認用のダミーテキスト -->
           <a class="header-menu"><img src="{{ url_for('static', filename='img/ハンバーガーメニュー.png') }}" alt="メニュー"></a>
         </div>
