--- a/ChatApp/static/css/channels.css
+++ b/ChatApp/static/css/channels.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -26,7 +25,7 @@ body {
 
 .header {
   width: 100%;
-  height: 120px;
+  height: 80px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -46,7 +45,7 @@ body {
 }
 
 .header-uname {
-  flex: 1;
+  flex-grow: 1;
   /* 余白部分を占有する */
   text-align: end;
 }
@@ -75,6 +74,7 @@ main{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 12px;
 }
 
 .area-name {
@@ -94,17 +94,24 @@ li {
   border: #FFFFFF;
   border-style: solid;
   text-align: center;
-  padding: 8px 40px;
 }
 
-a {
+.prefectures a {
+  width: 70%;
+  height: auto;
   text-decoration: none;
   color: #FFFFFF;
+  border: #FFFFFF;
+  border-style: solid;
+  text-align: center;
+  padding: 6px 40px;
 }
 
 .prefectures {
-  min-height: 70%;
+  min-height: 75%;
+  min-width: 70%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: space-around;
 }
