--- a/ChatApp/templates/auth/login.html
+++ b/ChatApp/templates/auth/login.html
@@ -1,5 +1,9 @@
+{% extends 'base.html' %}
 
-{% extends 'auth/base.html' %}
+{% block stylesheet %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
+{% endblock %}
+
 {% block title %}
 <title>login</title>
 {% endblock %}
@@ -46,4 +50,4 @@
       </div>
     </form>
   </div>
-{% endblock %} 
+{% endblock %}
