--- a/ChatApp/templates/channels/home.html
+++ b/ChatApp/templates/channels/home.html
@@ -1,4 +1,4 @@
-{% extends 'channels/base.html' %}
+{% extends 'base.html' %}
 {% block stylesheet %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
 {% endblock %}
@@ -12,36 +12,45 @@
   {% include 'channels/header.html' %}
   <main>
     <div class="main-contents">
-      <div class="main-img">
+      <div class="main">
         <img class="map-img" src="{{ url_for('static', filename='img/日本地図.png') }}" alt="背景画像">
+         
+        <a id="hokkaido-tohoku"
+           class="balloon balloon-top-bottom"
+           href="{{ url_for( 'channels.channels_view', area_id='1' ) }}">
+           北海道・東北
+        </a>
+        <a id="kanto"
+           class="balloon balloon-left"
+           href="{{ url_for( 'channels.channels_view', area_id='2' ) }}">
+           関東
+        </a>
+        <a id="chubu"
+           class="balloon balloon-bottom"
+           href="{{ url_for( 'channels.channels_view', area_id='3' ) }}">
+           中部
+        </a>
+        <a id="kinki"
+           class="balloon balloon-top"
+           href="{{ url_for( 'channels.channels_view', area_id='4' ) }}">
+           近畿
+        </a>
+        <a id="chugoku"
+           class="balloon balloon-bottom"
+           href="{{ url_for( 'channels.channels_view', area_id='5' ) }}">
+           中国
+        </a>
+        <a id="shikoku"
+           class="balloon balloon-top"
+           href="{{ url_for( 'channels.channels_view', area_id='6' ) }}">
+           四国
+        </a>
+        <a id="kyushu-okinawa"
+           class="balloon balloon-top-right"
+           href="{{ url_for( 'channels.channels_view', area_id='7' ) }}">
+           九州・沖縄
+        </a>
 
-          <a id="hokkaido-tohoku" href="{{ url_for( 'channels.channels_view', area_id='1' )}}">
-            <img src="{{ url_for('static', filename='img/北海道・東北.png') }}" alt="北海道・東北">
-          </a>
-
-          <a id="kanto" href="{{ url_for( 'channels.channels_view', area_id='2' )}}">
-            <img src="{{ url_for('static', filename='img/関東.png') }}" alt="関東">
-          </a>
-
-          <a id="chubu" href="{{ url_for( 'channels.channels_view', area_id='3' )}}">
-            <img src="{{ url_for('static', filename='img/中部.png') }}" alt="中部">
-          </a>
-
-          <a id="kinki" href="{{ url_for( 'channels.channels_view', area_id='4' )}}">
-            <img src="{{ url_for('static', filename='img/近畿.png') }}" alt="近畿">
-          </a>
-
-          <a id="chugoku" href="{{ url_for( 'channels.channels_view', area_id='5' )}}">
-            <img src="{{ url_for('static', filename='img/中国.png') }}" alt="中国">
-          </a>
-
-          <a id="shikoku" href="{{ url_for( 'channels.channels_view', area_id='6' )}}">
-            <img src="{{ url_for('static', filename='img/四国.png') }}" alt="四国">
-          </a>
-
-          <a id="kyushu-okinawa" href="{{ url_for( 'channels.channels_view', area_id='7' )}}">
-            <img src="{{ url_for('static', filename='img/九州・沖縄.png') }}" alt="九州・沖縄">
-          </a>
       </div>
     </div>
   </main>
