--- a/ChatApp/templates/menu/menu.html
+++ b/ChatApp/templates/menu/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>menu</title>
-    <link rel="stylesheet" href="../../static/css/header.css" />
+    <link rel="stylesheet" href="../../static/css/menu.css" />
     <link rel="icon" href="/ChatApp/static/img/favicon.png" />
   </head>
   <body>
@@ -20,7 +20,6 @@
             </label>
         
             <nav class="drawer_nav">
-                <div class="nav-left"></div>
                 <div class="nav-right">
                     <ul>
                         <li><a href="/home">ホーム</a></li>
